cabal-version:      3.0
name:               breakspan
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Josh Meredith
maintainer:         joshmeredith2008@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable breakspan
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      tasty-bench,
		      ghc
    hs-source-dirs:   app
    default-language: Haskell2010
